# multiagent-dss-epidemic

./: README.md  pyproject.toml
src/ai4epi/: __init__.py  cli.py
src/ai4epi/analysis/: age_group_season.py  analysis_pipeline.py  context_builders.py  epidemic_waves.py  explainability.py  forecasting.py  preprocessing.py
src/ai4epi/core/: config.py  context.py  io.py  sections.py
src/ai4epi/data/: influenza.py  weather.py
src/ai4epi/generation/: bulletin.py  editor.py  narrator.py  pipeline.py
src/ai4epi/orchestration/: workflow.py
src/ai4epi/output/: figures.py  pdf.py  rendering.py  tables.py
src/ai4epi/quality/: evaluation.py  runtime_checks.py
